refactoring under java11